style: prefer use get first method.