@@ -93,7 +93,7 @@ public abstract class E2ePerfTestMultiNetWorkerServer extends Launcher {
         }
 
         if (pipeline.size() == 1) {
-            return handleRequest(pipeline.get(0), socket);
+            return handleRequest(pipeline.getFirst(), socket);
         }
 
         Promise<ByteBuf>[] promiseN = new Promise[pipeline.size()];
